# creatSampleOpenFDTD

./: README.md  cell.npy  cell_realistic.npy  creatCell.ipynb  creatCell.py  disp.py  main.py  pyproject.toml
.ipynb_checkpoints/: creatCell-checkpoint.ipynb  dispCell-checkpoint.py
